@@ -1,5 +1,7 @@
 
 
+- defs: add a working offsetof() and containerof() for C++ mode
+- defs: use GCC's __builtin_offsetof
 - dir: HX_rrmdir: do not stop on error
 - mc: change first argument type for HXmc_dup()
   [compatible change, no ABI version bump]
